--- a/public/admin.html
+++ b/public/admin.html
@@ -26,6 +26,15 @@
         </section>
 
         <section class="admin-section">
+            <h2>Create Admin Account (main admin only)</h2>
+            <form id="createAdminForm">
+                <input type="text" id="newAdminUsername" placeholder="Admin username" required>
+                <input type="password" id="newAdminPassword" placeholder="Password" required>
+                <button type="submit">Create Admin</button>
+            </form>
+        </section>
+
+        <section class="admin-section">
             <h2>Streamers</h2>
             <div id="streamersList"></div>
         </section>
